force-app/main/default/objects/Case/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this case has been escalated for priority handling. Checked if escalated.</description>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>