force-app/main/default/objects/Case/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <description>The total time in hours between the case creation and the final resolution of the case.</description>
    <label>Resolution Time</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>