force-app/main/default/objects/Case/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <description>The total time in hours between the case creation and the first response sent to the customer.</description>
    <label>Response Time</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>