force-app/main/default/objects/Case/fields/SLA_Resolution_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Resolution_Deadline__c</fullName>
    <description>The date and time by which this case must be fully resolved in compliance with the SLA terms.</description>
    <label>SLA Resolution Deadline</label>
    <type>DateTime</type>
</CustomField>