force-app/main/default/objects/Case/fields/SLA_Response_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Response_Deadline__c</fullName>
    <description>The latest date and time by which the initial response to the customer must be completed as per the defined SLA.</description>
    <label>SLA Response Deadline</label>
    <type>DateTime</type>
</CustomField>